# ShadowData

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: FUNDING.yml
.github/workflows/: main.yml
examples/: anonymization.md  anonymization.py  i10n_brazil.md  i10n_brazil.py  i10n_us.md  i10n_us.py  pii_nlp.md  symmetric_cipher.md
shadow_data/: anonymization.py  exceptions.py  masking.py  reversible.py  utils.py
shadow_data/cryptohash/: symmetric_cipher.py
shadow_data/l10n/: ClearIdentifier.py  brazil.py  brazilian.py  usa.py
shadow_data/pii/: enums.py  model_selector.py  spacy.py
tests/: test_anonymization.py  test_email_anonymization.py  test_ipv4_anonymization.py  test_phone_number_anonymization.py  test_text_processor.py  test_utils.py
tests/cryptohash/: test_symmetric_cipher.py
tests/i10n/: test_brazil.py  test_brazilian.py  test_clear_identifier.py  test_usa.py
tests/pii/: test_model_selector.py  test_pii_spacy.py
