[tool.poetry]
name = "shadow_data"
version = "0.1.0"
description = "A Python library for data anonymization, masking, and perturbation."
authors = ["Adler Medrado <adler@adlermedrado.com.br>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
case-sensitive = true
