[tool.poetry]
name = "shadow_data"
version = "0.2.0"
description = "A sensitive data handler python library"
authors = ["Adler Medrado <adler@adlermedrado.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

spacy = { version = "^3.8", optional = true, markers = "platform_system == 'Darwin' and platform_machine == 'arm64' or platform_system == 'Darwin' and platform_machine == 'x86_64' or platform_system == 'Linux' or platform_system == 'Windows'" }

[tool.poetry.extras]
spacy = ["spacy"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
case-sensitive = true
